# sketchy-check

./: .gitignore  Makefile  README.md  RUNS.md  RUST_PERF_NEXT.md  SUBMISSION.md  docker-compose.rust.yml  docker-compose.yml  info.json  nginx.conf
api/: Dockerfile  go.mod
api-rust/: Cargo.toml  Dockerfile
api-rust/src/: config.rs  index.rs  main.rs  mcc.rs  responses.rs  vectorize.rs
api-rust/src/kernel/: avx2.rs  mod.rs  scalar.rs  top5.rs
api-rust/src/server/: blocking.rs  epoll.rs  http.rs  iouring.rs  mod.rs
api/cmd/api/: main.go
api/cmd/preprocess/: main.go
api/internal/ivf/: index.go  search.go  search_test.go
api/internal/ivf/kernel/: kernel_amd64.c  kernel_amd64.h  scanrange_cgo.go  scanrange_fallback.go  top5.go
api/internal/kmeans/: kmeans.go
api/internal/mcc/: mcc.go
api/internal/responses/: responses.go
api/internal/server/: server.go
api/internal/vectorize/: vectorize.go
haproxy/: haproxy.cfg
