[package]
name = "sketchy-rust"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
libc = "0.2"
memchr = { version = "2", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
